--- a/drupal/sites/all/themes/checkdesk/assets/scss/_tabs.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/_tabs.scss
@@ -30,6 +30,8 @@ div.tabs {
   @include reset-box-model;
   @include ctb-clearfix;
   padding: { top: $tab-padding; bottom: $tab-padding; }
+  position: relative;
+  z-index: 2;
   
   ul.primary {
     @include reset-box-model;
